main news section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css">
 
   <title>Frontend Mentor | News homepage</title>
@@ -36,19 +40,44 @@
         </ul>
       </nav>
     </header>
+    <section class="main-section">
+      <div class="img-desktop">
+        <img src="./assets/images/image-web-3-desktop.jpg" alt="">
+        <div class="main-news">
+          <h1 class="main-heading">The Bright Future Of Web 3.0?</h1>
+          <div>
+            <p class="main-text">We dive into the next evolution of the web that claims to put the power of the
+              platforms
+              back into the hands of the people.
+              But is it really fulfilling its promise?</p>
+            <a href="#" class="btn-more">Read More</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="news-feed">
+        NEW
+      </div>
+    </section>
   </main>
 
-  Home
-  New
-  Popular
-  Trending
-  Categories
 
 
-  <footer class="attribution">
+
+  <!-- <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
-  </footer>
+  </footer> -->
+
+  <!-- /* Footer */
+.attribution {
+  font-size: 1.1rem;
+  text-align: center;
+}
+
+.attribution a {
+  color: hsl(228, 45%, 44%);
+} -->
 </body>
 
 </html>
