--- a/index.html
+++ b/index.html
@@ -44,19 +44,80 @@
       <div class="img-desktop">
         <img src="./assets/images/image-web-3-desktop.jpg" alt="">
         <div class="main-news">
-          <h1 class="main-heading">The Bright Future Of Web 3.0?</h1>
-          <div>
-            <p class="main-text">We dive into the next evolution of the web that claims to put the power of the
-              platforms
-              back into the hands of the people.
-              But is it really fulfilling its promise?</p>
-            <a href="#" class="btn-more">Read More</a>
+          <div class="main-heading-div">
+            <h1 class="main-heading">The Bright Future Of Web 3.0?</h1>
+          </div>
+          <div class="text">
+            <div>
+              <p class="main-text">We dive into the next evolution of the web that claims to put the power of the
+                platforms
+                back into the hands of the people.
+                But is it really fulfilling its promise?</p>
+            </div>
+            <div class="btn">
+              <a href="#" class="btn-more">Read More</a>
+            </div>
           </div>
         </div>
       </div>
 
       <div class="news-feed">
-        NEW
+        <h2 class="secondary-heading">NEWS</h2>
+
+        <div class="news-center">
+          <div class="news">
+            <h4 class="tertiary-heading">Hydrogen VS Electric Cars</h4>
+            <p class="news-text">Will hydrogen-fueled cars ever catch up to EVs?</p>
+          </div>
+          <div class="news">
+            <h4 class="tertiary-heading">The Downsides of AI Artistry</h4>
+            <p class="news-text">What are the possible adverse effects of on-demand AI image generation?</p>
+          </div>
+          <div class="news">
+            <h4 class="tertiary-heading">Is VC Funding Drying Up?</h4>
+            <p class="news-text">Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="topics">
+
+      <div class="topic-1 flex">
+        <div class="topic-img">
+          <img src="./assets/images/image-retro-pcs.jpg" alt="">
+        </div>
+
+        <div class="topic-text flex-column">
+          <p class="topic-number">01</p>
+          <h4 class="topic-heading">Reviving Retro PCs</h4>
+          <p class="news-text">What happens when old PCs are given modern upgrades?</p>
+        </div>
+      </div>
+
+
+      <div class="topic-2 flex">
+        <div class="topic-img">
+          <img src="./assets/images/image-top-laptops.jpg" alt="">
+        </div>
+
+        <div class="topic-text flex-column">
+          <p class="topic-number">02</p>
+          <h4 class="topic-heading">Top 10 Laptops of 2022</h4>
+          <p class="news-text">Our best picks for various needs and budgets.</p>
+        </div>
+      </div>
+
+
+      <div class="topic-3 flex">
+        <div class="topic-img">
+          <img src="./assets/images/image-gaming-growth.jpg" alt="">
+        </div>
+
+        <div class="topic-text flex-column">
+          <p class="topic-number">03</p>
+          <h4 class="topic-heading">The Growth of Gaming</h4>
+          <p class="news-text">How the pandemic has sparked fresh opportunities.</p>
+        </div>
       </div>
     </section>
   </main>
