--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="topic-text flex-column">
           <p class="topic-number">01</p>
           <h4 class="topic-heading">Reviving Retro PCs</h4>
-          <p class="news-text">What happens when old PCs are given modern upgrades?</p>
+          <p class="topic-text-last">What happens when old PCs are given modern upgrades?</p>
         </div>
       </div>
 
@@ -103,7 +103,7 @@
         <div class="topic-text flex-column">
           <p class="topic-number">02</p>
           <h4 class="topic-heading">Top 10 Laptops of 2022</h4>
-          <p class="news-text">Our best picks for various needs and budgets.</p>
+          <p class="topic-text-last">Our best picks for various needs and budgets.</p>
         </div>
       </div>
 
@@ -116,7 +116,7 @@
         <div class="topic-text flex-column">
           <p class="topic-number">03</p>
           <h4 class="topic-heading">The Growth of Gaming</h4>
-          <p class="news-text">How the pandemic has sparked fresh opportunities.</p>
+          <p class="topic-text-last">How the pandemic has sparked fresh opportunities.</p>
         </div>
       </div>
     </section>
